# AdapterDesignPatternCPP

./: CMakeLists.txt  README.md  main.cpp  run.sh
Adapters/: CometaSourceAdapter.cpp  CometaSourceAdapter.h  PaodeAcucarSourceAdapter.cpp  PaodeAcucarSourceAdapter.h  SaoLuizSourceAdapter.cpp  SaoLuizSourceAdapter.h  SearchAdapter.h  ViaSulSourceAdapter.cpp  ViaSulSourceAdapter.h
Sources/: CometaSource.cpp  CometaSource.h  PaodeAcucarSource.cpp  PaodeAcucarSource.h  SaoLuizSource.cpp  SaoLuizSource.h  ViaSulSource.cpp  ViaSulSource.h  search.cpp  search.h
product/: Product.cpp  Product.h  ProductSearcher.cpp  ProductSearcher.h
